--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@babel/core": "^7.17.5",
+        "@babel/preset-env": "^7.16.11",
+        "@babel/preset-react": "^7.16.7",
+        "@babel/preset-typescript": "^7.16.7",
         "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
         "@svgr/webpack": "^6.2.1",
         "@types/node": "^17.0.21",
@@ -26,6 +30,8 @@
         "@types/webpack-dev-server": "^4.7.2",
         "@typescript-eslint/eslint-plugin": "^5.12.1",
         "@typescript-eslint/parser": "^5.12.1",
+        "babel-loader": "^8.2.3",
+        "babel-plugin-i18next-extract": "^0.8.3",
         "css-loader": "^6.6.0",
         "eslint": "^8.10.0",
         "eslint-config-standard-with-typescript": "^23.0.0",
