--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "lint:ts": "eslint \"**/*.{ts,tsx}\"",
         "lint:ts:fix": "eslint \"**/*.{ts,tsx}\" --fix",
         "lint:scss": "npx stylelint \"**/*.scss\"",
-        "lint:scss:fix": "npx stylelint \"**/*.scss\" --fix"
+        "lint:scss:fix": "npx stylelint \"**/*.scss\" --fix",
+        "unit": "jest --config ./config/jest/jest.config.ts"
     },
     "keywords": [],
     "author": "",
@@ -22,6 +23,7 @@
         "@babel/preset-typescript": "^7.16.7",
         "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
         "@svgr/webpack": "^6.2.1",
+        "@types/jest": "^27.4.1",
         "@types/node": "^17.0.21",
         "@types/react": "^17.0.39",
         "@types/react-dom": "^17.0.11",
@@ -42,6 +44,7 @@
         "eslint-plugin-react": "^7.31.8",
         "file-loader": "^6.2.0",
         "html-webpack-plugin": "^5.5.0",
+        "jest": "^27.5.1",
         "mini-css-extract-plugin": "^2.5.3",
         "react-refresh": "^0.14.0",
         "sass": "^1.49.9",
