--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,12 +31,12 @@
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module",
-    "project": "./tsconfig.json",
-    "allowImportExportEverywhere": false,
-    "codeFrame": false,
-    "ecmaFeatures": {
-      "jsx": true
-    }
+    "project": "./tsconfig.json"
+    // "allowImportExportEverywhere": false,
+    // "codeFrame": false,
+    // "ecmaFeatures": {
+    //   "jsx": true
+    // }
   },
   "settings": {
     "react": {
@@ -46,8 +46,8 @@
   "rules": {
     "react/jsx-indent": [2, 4],
     "react/jsx-indent-props": [2, 4],
-    // indent: [2, 4],
-    "react/jsx-filename-extension": [2, { "extensions": [".js", ".jsx", ".tsx", ".ts"] }],
+    "indent": [2, 4],
+    "react/jsx-filename-extension": [2, { "extensions": [".js", ".jsx", ".tsx", ".ts", ".test.tsx"] }],
     "import/no-unresolved": "off",
     "import/prefer-default-export": "off",
     "no-unused-vars": "warn",
@@ -64,6 +64,7 @@
     "@typescript-eslint/no-floating-promises": "off",
     "@typescript-eslint/naming-convention": "off",
     "i18next/no-literal-string": ["warn", { "markupOnly": true }],
-    "max-len": ["error", { "ignoreComments": true, "code": 120 }]
+    "max-len": ["error", { "ignoreComments": true, "code": 120 }],
+    "@typescript-eslint/ban-ts-comment": "off"
   }
 }
