--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -62,7 +62,7 @@
     "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/no-floating-promises": "off",
     "@typescript-eslint/naming-convention": "off",
-    "i18next/no-literal-string": ["warn", { "markupOnly": true, "ignoreAttribute": ["data-testid"] }],
+    "i18next/no-literal-string": ["warn", { "markupOnly": true, "ignoreAttribute": ["data-testid", "to"] }],
     "max-len": ["error", { "ignoreComments": true, "code": 120 }],
     "@typescript-eslint/ban-ts-comment": "off"
   },
