--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
         "lint:ts:fix": "eslint \"**/*.{ts,tsx}\" --fix",
         "lint:scss": "npx stylelint \"**/*.scss\"",
         "lint:scss:fix": "npx stylelint \"**/*.scss\" --fix",
-        "unit": "jest --config ./config/jest/jest.config.ts"
+        "unit": "jest --config ./config/jest/jest.config.ts",
+        "storybook": "start-storybook -p 6006 -c ./config/.storybook",
+        "build-storybook": "build-storybook -c ./config/.storybook"
     },
     "keywords": [],
     "author": "",
@@ -22,6 +24,14 @@
         "@babel/preset-react": "^7.16.7",
         "@babel/preset-typescript": "^7.16.7",
         "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
+        "@storybook/addon-actions": "^6.4.19",
+        "@storybook/addon-essentials": "^6.4.19",
+        "@storybook/addon-interactions": "^6.4.19",
+        "@storybook/addon-links": "^6.4.19",
+        "@storybook/builder-webpack5": "^6.4.19",
+        "@storybook/manager-webpack5": "^6.4.19",
+        "@storybook/react": "^6.4.19",
+        "@storybook/testing-library": "^0.0.9",
         "@svgr/webpack": "^6.2.1",
         "@testing-library/jest-dom": "^5.16.2",
         "@testing-library/react": "^12.1.3",
@@ -45,6 +55,7 @@
         "eslint-plugin-n": "^15.3.0",
         "eslint-plugin-promise": "^6.0.1",
         "eslint-plugin-react": "^7.31.8",
+        "eslint-plugin-storybook": "^0.6.5",
         "file-loader": "^6.2.0",
         "html-webpack-plugin": "^5.5.0",
         "identity-obj-proxy": "^3.0.0",
