--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,12 +30,12 @@
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module",
-    "project": "./tsconfig.json"
+    // "project": "./tsconfig.json",
     // "allowImportExportEverywhere": false,
     // "codeFrame": false,
-    // "ecmaFeatures": {
-    //   "jsx": true
-    // }
+    "ecmaFeatures": {
+      "jsx": true
+    }
   },
   "settings": {
     "react": {
@@ -64,7 +64,8 @@
     "@typescript-eslint/naming-convention": "off",
     "i18next/no-literal-string": ["warn", { "markupOnly": true, "ignoreAttribute": ["data-testid", "to"] }],
     "max-len": ["error", { "ignoreComments": true, "code": 120 }],
-    "@typescript-eslint/ban-ts-comment": "off"
+    "@typescript-eslint/ban-ts-comment": "off",
+    "react/display-name": "off"
   },
   "overrides": [
     {
