--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -60,7 +60,8 @@
         "@typescript-eslint/ban-ts-comment": "off",
         "react/display-name": "off",
         "react-hooks/rules-of-hooks": "error", // Checks rules of Hooks
-        "react-hooks/exhaustive-deps": "error"
+        "react-hooks/exhaustive-deps": "error",
+        "@typescript-eslint/no-var-requires": "off"
     },
     "overrides": [
         {
