--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -61,7 +61,8 @@
         "react/display-name": "off",
         "react-hooks/rules-of-hooks": "error", // Checks rules of Hooks
         "react-hooks/exhaustive-deps": "error",
-        "@typescript-eslint/no-var-requires": "off"
+        "@typescript-eslint/no-var-requires": "off",
+        "no-param-reassign": "off"
     },
     "overrides": [
         {
