--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -63,7 +63,8 @@
         "react-hooks/rules-of-hooks": "error", // Checks rules of Hooks
         "react-hooks/exhaustive-deps": "error",
         "@typescript-eslint/no-var-requires": "off",
-        "no-param-reassign": "off"
+        "no-param-reassign": "off",
+        "no-undef": "off"
     },
     "overrides": [
         {
