--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
         "jsx": "react-jsx",
         "outDir": "./dist",
         "allowJs": true,
+        "strict": true,
         "moduleResolution": "node",
         // "strictNullChecks": true,
         // "strictFunctionTypes": true,
