--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,8 @@
     },
     "globals": {
         "__IS_DEV__": true,
-        "__API__": true
+        "__API__": true,
+        "__PROJECT__": true
     },
     "extends": [
         "eslint:recommended",
