--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -44,7 +44,7 @@
         "react/jsx-filename-extension": [2, { "extensions": [".js", ".jsx", ".tsx", ".ts", ".test.tsx"] }],
         "import/no-unresolved": "off",
         "import/prefer-default-export": "off",
-        "no-unused-vars": "warn",
+        "no-unused-vars": "off",
         "react/require-default-props": "off",
         "react/react-in-jsx-scope": "off",
         "react/jsx-props-no-spreading": "warn",
@@ -66,6 +66,8 @@
         "@typescript-eslint/no-var-requires": "off",
         "no-param-reassign": "off",
         "no-undef": "off"
+        // "no-unused-vars": 0
+        // "@typescript-eslint/no-unused-vars": 2
     },
     "overrides": [
         {
