--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -41,7 +41,10 @@
         "react/jsx-indent": [2, 4],
         "react/jsx-indent-props": [2, 4],
         "indent": [2, 4],
-        "react/jsx-filename-extension": [2, { "extensions": [".js", ".jsx", ".tsx", ".ts", ".test.tsx"] }],
+        "react/jsx-filename-extension": [
+            2,
+            {"extensions": [".js", ".jsx", ".tsx", ".ts", ".test.tsx"]}
+        ],
         "import/no-unresolved": "off",
         "import/prefer-default-export": "off",
         "no-unused-vars": "off",
@@ -57,8 +60,22 @@
         "@typescript-eslint/explicit-function-return-type": "off",
         "@typescript-eslint/no-floating-promises": "off",
         "@typescript-eslint/naming-convention": "off",
-        "i18next/no-literal-string": ["warn", { "markupOnly": true, "ignoreAttribute": ["data-testid", "to"] }],
-        "max-len": ["error", { "ignoreComments": true, "code": 140 }],
+        "i18next/no-literal-string": [
+            "warn",
+            {
+                "markupOnly": true,
+                "ignoreAttribute": [
+                    "data-testid",
+                    "to",
+                    "justify",
+                    "align",
+                    "direction",
+                    "gap",
+                    "role"
+                ]
+            }
+        ],
+        "max-len": ["error", {"ignoreComments": true, "code": 140}],
         "@typescript-eslint/ban-ts-comment": "off",
         "react/display-name": "off",
         "react-hooks/rules-of-hooks": "error", // Checks rules of Hooks
